[tool.poetry]
name = "intel-api"
version = "0.1.0"
description = ""
authors = ["Yuval Saraf <unimonkiez@gmail.com>"]
readme = "README.md"
packages = [{include = "intel_api"}]

[tool.poetry.scripts]
start = "intel_api.start:run"

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.16.1"
uvicorn = "^0.19.0"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
